--- a/.travis.yml
+++ b/.travis.yml
@@ -50,4 +50,4 @@ before_install:
   - "sleep 120"
 
 # we're not installing starrynight globally, so we run the script from the local node_modules folder
-script: "starrynight -survey acceptance"
+script: "starrynight run-framework nightwatch"
