--- a/circle.yml
+++ b/circle.yml
@@ -18,7 +18,7 @@ test:
 
 deployment:
   hub: 
-    branch: master
+    tag: /v[0-9]+(\.[0-9]+)*/
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push medbook/telescope
+      - docker push medbook/telescope:$CIRCLE_TAG
