--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
   override:
     - docker info
     - if [[ -e ~/docker/image.tar ]]; then docker load --input ~/docker/image.tar; fi
-    #TODO figure out how to pass tag in here
+    # CIRCLE_TAG is the git tag name if that's what triggered the build
     - docker build -t medbook/telescope:$CIRCLE_TAG .
     - mkdir -p ~/docker; docker save medbook/telescope > ~/docker/image.tar
 
@@ -18,6 +18,7 @@ test:
 
 deployment:
   hub: 
+    # example tag v0.45
     tag: /v[0-9]+(\.[0-9]+)*/
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
